--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
 
 .page {
-    background-color: rgba(245, 245, 245, 1);
-    height: 100vh;
-    max-height: 580px;
-    border-radius: 10px;
-    margin: 30px 20px;
+    background-color: #F5F5F5;
+    height: 100%;
+    border-radius: 5px;
 }
