--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,18 @@
 
 body {
   margin: 0;
-  background-color:rgba(11, 36, 52, 1);
+  background-color: #0B2434;
+  padding: 20px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#root {
+  height: 100%;
+  width: 100%;
+  max-height: 90%;
+  max-width: 95%;
 }
