--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,30 @@
     background-color: #F5F5F5;
     height: 100%;
     border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.die-container {
+    display: grid;
+    grid-template: auto auto / repeat(5, 1fr);
+    gap: 20px; 
+}
+
+.die {
+    width: 50px;
+    height: 50px;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+    background: white;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+    font-family: Inter, sans-serif;
+    font-weight: 700;
+    font-size: 1.75rem
+}
+
+.die:active {
+    background: #59E391;
 }
