--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,11 @@
 
+button {
+    border: none;
+    cursor: pointer;
+    font-family: karla, sans-serif;
+    font-weight: 700;
+}
+
 .page {
     background-color: #F5F5F5;
     height: 100%;
@@ -21,10 +28,6 @@
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
     background: white;
     border-radius: 10px;
-    border: none;
-    cursor: pointer;
-    font-family: karla, sans-serif;
-    font-weight: 700;
     font-size: 1.75rem
 }
 
@@ -33,15 +36,12 @@
 }
 
 .rollButton {
-    width: 92px;
-    height: 36px;
-    border-radius: 10px;
-    border: none;
-    cursor: pointer;
-    font-family: karla, sans-serif;
-    font-weight: 700;
-    font-size: 1.75rem;
+    height: 50px;
+    width: 100px;
+    border-radius: 6px;
+    font-size: 1.2rem;
     color: white;
     background: #5035FF;
     box-shadow: 0px 3.2px 7.68px rgba(0, 0, 0, 0.18);
 }
+
