--- a/src/App.css
+++ b/src/App.css
@@ -16,10 +16,23 @@ button {
     flex-direction: column;
 }
 
-.die-container {
+.title {
+    font-size: 40px;
+    margin: 0;
+}
+
+.instructions {
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    margin-top: 0;
+    text-align: center;
+}
+
+.dice-container {
     display: grid;
     grid-template: auto auto / repeat(5, 1fr);
     gap: 20px; 
+    margin-bottom: 40px;
 }
 
 .die {
@@ -29,10 +42,6 @@ button {
     background: white;
     border-radius: 10px;
     font-size: 1.75rem
-}
-
-.die:active {
-    background: #59E391;
 }
 
 .rollButton {
