--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,9 @@ button {
 
 .rollButton {
     height: 50px;
-    width: 100px;
+    white-space: nowrap;
+    width: auto;
+    padding: 6px 21px;
     border-radius: 6px;
     font-size: 1.2rem;
     color: white;
