--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@ button {
     font-weight: 700;
 }
 
+button:focus {
+    outline: 2px solid #80D8FF;
+}
+
 .page {
     background-color: #F5F5F5;
     height: 100%;
@@ -54,5 +58,17 @@ button {
     color: white;
     background: #5035FF;
     box-shadow: 0px 3.2px 7.68px rgba(0, 0, 0, 0.18);
+}
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
 }
 
